feat: improved seo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>World Generator</title>
+    <meta
+      name="description"
+      content="A procedural planet mesh generator that utilize GPGPU for better performance."
+    />
+    <meta
+      name="keywords"
+      content="GPGPU, ThreeJS, Planet, Generator, Mesh, 3D, Shader, World"
+    />
+    <meta name="author" content="Muhammed Can Durmus" />
+    <meta
+      property="og:title"
+      content="Procedural Planet Generator - GPGPU Mesh Generator"
+    />
+    <meta property="og:url" content="http://procedural-planets.vercel.app" />
+    <meta
+      property="og:description"
+      content="A procedural planet mesh generator that utilize GPGPU for better performance."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/XenoverseUp/procedural-planets/main/docs/showcase.png"
+    />
+    <title>Procedural Planet Generator</title>
   </head>
   <body>
     <div id="root"></div>
